crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__directives.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[[File:diagram.png|An architecture diagram]]

<math display="block">E = mc^2</math>
