crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__emphasis-nesting.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Strong text can hold emphasis: '''bold with *italic* inside'''.

Emphasis closes at the first lone star: ''onetwo''* three*.

A doubled run opens strong even mid-word: '''a*b*c'''.
