crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__field-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
; Author
: Ada Writer
; Version
: 1.0
; Note
: A field whose value begins on the next line and spans an indented block.
