crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__figure-legend.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div class="figure">
[[File:chart.png|The caption line.]]
</div>
