crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__figures.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div class="figure">
[[File:photo.png|A caption describing the figure.]]
</div>
