crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__footnotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A statement needs a citation<ref>The first footnote body.</ref>, and another needs a different one<ref>The second footnote body.</ref>.

<references />
