crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__headers.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<span id="top-section"></span>
= Top Section =

Body text under the top section.

<span id="nested-section"></span>
== Nested Section ==

Body text under the nested section.

<span id="deeper-section"></span>
=== Deeper Section ===

Body text under the deeper section.
