crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__indirect-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Follow the [https://example.com/page alias] to its destination.
