crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__inline-literal-linebreak.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A literal <code>spanning two lines</code> folds the line break to a single space.
