crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__inline-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
An <span id="inline-target">inline target</span> marks a spot that other text can point back to.

Here is <span id="another-one">another one</span> in the middle of a sentence.
