crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__internal-targets-multiple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<span id="second target"></span>
= Section Title<span id="first target"></span> =

Body under the section.
